--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,41 @@
   <%= javascript_include_tag 'https://js.stripe.com/v2/' %>
   <%= csrf_meta_tags %>
 </head>
+
+<% if user_signed_in? %>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <%= link_to "Posts", blog_posts_path, class: "navbar-brand" %>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-left">
+
+        <!-- Future Links! -->
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<% else %>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <%= link_to "Posts", blog_posts_path, class: "navbar-brand" %>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Sign Up",  new_user_registration_path %></li>
+        <li><%= link_to "Forgot Password",  new_user_password_path %></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<% end %>
+
 <body>
 
 <div class="container">
