--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.number_field :user_id, value: current_user.id %>
   </div>
   <div class="field">
     <%= f.label :entry_date %><br>
