--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Sign Up",  new_user_registration_path %></li>
+        <li><%= link_to "Log In", user_session_path %></li>
         <li><%= link_to "Forgot Password",  new_user_password_path %></li>
       </ul>
     </div>
