--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,37 +1,27 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Blog Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Blog entry</th>
-      <th>User</th>
-      <th>Entry date</th>
-      <th>Address</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="row">
+    <% @blog_posts.each do |blog_post| %>  
+      <div class="col-md-12">        
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <strong><%= blog_post.title %></strong>
+            by <%= blog_post.author %>
+            <p>In <%= blog_post.address %>on <%= blog_post.entry_date %></p>
+        </div>
+        <div class="panel-body">
+          <p><%= blog_post.blog_entry %></p>
+        </div>
+        <div class="panel-footer">
+          <%= link_to 'Show', blog_post, class: "btn btn-primary" %>
+          <%= link_to 'Edit', edit_blog_post_path(blog_post), class: "btn btn-warning" %>
+          <%= link_to 'Destroy', blog_post, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+        </div> <!-- end of footer -->
+        </div> <!-- end of panel -->
+      </div> <!-- end of column -->
+    <% end %>  
+  </div> <!-- end of row -->
 
-  <tbody>
-    <% @blog_posts.each do |blog_post| %>
-      <tr>
-        <td><%= blog_post.title %></td>
-        <td><%= blog_post.author %></td>
-        <td><%= blog_post.blog_entry %></td>
-        <td><%= blog_post.user_id %></td>
-        <td><%= blog_post.entry_date %></td>
-        <td><%= blog_post.address %></td>
-        <td><%= link_to 'Show', blog_post %></td>
-        <td><%= link_to 'Edit', edit_blog_post_path(blog_post) %></td>
-        <td><%= link_to 'Destroy', blog_post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
 
 <%= link_to 'New Blog post', new_blog_post_path %>
+
