--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -6,22 +6,21 @@
         <div class="panel panel-default">
           <div class="panel-heading">
             <strong><%= blog_post.title %></strong>
-            by <%= blog_post.author %>
-            <p>In <%= blog_post.address %>on <%= blog_post.entry_date %></p>
+            by <%= blog_post.user.user_handle %>
+            <p>In <%= blog_post.address %> on <%= blog_post.entry_date %></p>
         </div>
         <div class="panel-body">
           <p><%= blog_post.blog_entry %></p>
         </div>
         <div class="panel-footer">
-          <%= link_to 'Show', blog_post, class: "btn btn-primary" %>
+          <%= link_to 'Read More', blog_post, class: "btn btn-primary" %>
           <%= link_to 'Edit', edit_blog_post_path(blog_post), class: "btn btn-warning" %>
-          <%= link_to 'Destroy', blog_post, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+          <%= link_to 'Delete', blog_post, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
         </div> <!-- end of footer -->
         </div> <!-- end of panel -->
       </div> <!-- end of column -->
     <% end %>  
   </div> <!-- end of row -->
-
 
 <%= link_to 'New Blog post', new_blog_post_path %>
 
