--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </div>
+  <div class="field">
+    <%= f.label "Photos:" %><br>
+    <%= f.file_field :image %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
