--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -1,53 +1,41 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @blog_post.title %>
-</p>
-
-<p>
-<!--   <strong>Author:</strong>
-  <%= @blog_post.author %>
-</p> -->
-
-<p>
-  By <%= @blog_post.user.user_handle %> 
-</P>
-
-<p>
-  <strong>Blog entry:</strong>
-  <%= @blog_post.blog_entry %>
-</p>
-
-<!-- <p> -->
-<!--   <strong>User:</strong>
-  <%= @blog_post.user_id %>
-</p> -->
-
-<p>
-  <strong>Entry date:</strong>
-  <%= @blog_post.entry_date %>
-</p>
-
-<p>
-  <strong>Address:</strong>
-  <%= @blog_post.address %>
-</p>
-<p>
-  <%= image_tag @blog_post.image.url(:medium) %>
-</p>
-<h4>Comments:</h4>
-  <% @blog_post.comments.each do |comment| %>
-<p><strong><%= comment.user.user_handle %></strong> commented <%= time_ago_in_words(comment.created_at) %> ago:</p>
-    <p><%= comment.comment_entry %></p>
-  <% end %>
-
-<% if user_signed_in? %>
-  <div>
-    <%= render 'comments/form'%>
-  </div>
-<% end %>
-
-
-<%= link_to 'Edit', edit_blog_post_path(@blog_post) %> |
-<%= link_to 'Back', blog_posts_path %>
+<div class="row">
+  <div class="col-md-12">        
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <p>
+          <strong>Title:</strong>
+          <%= @blog_post.title %>
+          By <%= @blog_post.user.user_handle %> 
+        </p>
+      </div> <!-- end of panel -->
+    <div class="panel-body">  
+      <p>
+        <strong>Blog entry:</strong>
+        <%= @blog_post.blog_entry %>
+      </p>
+      <p>
+        <strong>Entry date:</strong>
+        <%= @blog_post.entry_date %>
+      </p>
+      <p>
+        <strong>Address:</strong>
+        <%= @blog_post.address %>
+      </p>
+      <p>
+        <%= image_tag @blog_post.image.url(:medium) %>
+      </p>
+        <h4>Comments:</h4>
+          <% @blog_post.comments.each do |comment| %>
+        <p><strong><%= comment.user.user_handle %></strong> commented <%= time_ago_in_words(comment.created_at) %> ago:</p>
+        <p><%= comment.comment_entry %></p>
+        <% end %>
+    </div><!-- end of panel body -->
+      <% if user_signed_in? %>
+       <%= render 'comments/form'%>
+      <% end %>
+      <div class="panel-footer">
+        <%= link_to 'Back', blog_posts_path %>
+      </div> <!-- end of footer -->
+    </div> <!-- end of panel -->
+  </div> <!-- end of column -->
+</div> <!-- end of row -->
