added google maps and a marker

--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -22,6 +22,6 @@
       </div> <!-- end of column -->
     <% end %>  
   </div> <!-- end of row -->
-
+  <div id="map-canvas"></div>
 <%= link_to 'New Blog post', new_blog_post_path %>
 
