--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'https://js.stripe.com/v2/' %>
+  <script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['google_api_key']%>">
+  </script>
   <%= csrf_meta_tags %>
 </head>
 
