--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -32,6 +32,14 @@
     <%= f.date_select :entry_date %>
   </div>
   <div class="field">
+    <%= f.label :latitude %><br>
+    <%= f.text_field :latitude %>
+  </div>
+  <div class="field">
+    <%= f.label :longitude %><br>
+    <%= f.text_field :longitude %>
+  </div>
+  <div class="field">
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </div>
