--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -21,6 +21,7 @@
         <strong>Address:</strong>
         <%= @blog_post.address %>
       </p>
+      <p><%= @blog_post.latitude %>, <%= @blog_post.longitude %></p>
       <p>
         <%= image_tag @blog_post.image.url(:medium) %>
       </p>
