--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-#map-canvas {
+#map-canvas, #destination-map {
   width: 100%;
   height: 500px;
 }
