--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PicMapper</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'https://js.stripe.com/v2/' %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
+
   <script type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['google_api_key']%>">
-  </script>
+  </script> 
   <%= csrf_meta_tags %>
+  <%#= javascript_include_tag 'https://js.stripe.com/v2/' %>
+
 </head>
 
 <% if user_signed_in? %>
