--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
-  <div class="field">
+  <div class="field invisible">
     <%= f.label :author %><br>
     <%= f.text_field :author %>
   </div>
