styling and posts validations

--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -73,5 +73,5 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 </script>
 
-<%= link_to 'New Blog post', new_blog_post_path %>
+<%= link_to 'New Blog post', new_blog_post_path, class: "btn btn-success" %>
 
